Fix footer positioning, adjust spacing
Add position:relative, min-height:100vh to body element

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,9 +1,18 @@
+.light-mode {
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.dark-mode {
+  background-color: #333;
+  color: #f4f4f4;
+}
+
 /* General Styles */
 .yard-sale {
   padding: 0;
   font-family: "Caveat", cursive;
   font-size: 3em;
-  color: #333;
 }
 
 .bold {
@@ -26,12 +35,19 @@ h2 {
 
 h3 {
   font-size: 2.5em;
-  text-decoration: underline;
 }
 
 body {
+  position: relative;
+  min-height: 100vh;
   padding: 10px;
   font-family: "Ubuntu", sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.divider {
+  background-color: #333;
 }
 
 /* Nav and Footer Styles */
@@ -40,7 +56,6 @@ body {
   flex-direction: row;
   justify-content: center;
   gap: 10px;
-  font-family: "Caveat", cursive;
   font-size: 1.75em;
   justify-content: flex-start;
   align-items: center;
@@ -64,15 +79,27 @@ body {
   padding: 10px;
 }
 
+.user-status {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 10px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+}
 footer ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 10px;
-  width: 100%;
-  position: relative;
-  bottom: 0;
-  justify-content: space-between;
+  width: 100vw;
+  justify-content: space-around;
   padding: 10px;
   margin-bottom: 0;
 }
@@ -96,7 +123,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  padding: 60px;
+  padding: 20px 40px 60px 40px;
 }
 .page-content ul {
   width: 60%;
@@ -132,7 +159,7 @@ a:hover {
 
 .visible {
   display: block;
-  position: fixed;
+  position: absolute;
   top: 43%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -217,7 +244,6 @@ a:hover {
   width: 100%;
 }
 .watchlist-content h1 {
-  font-family: "Caveat", cursive;
   position: relative;
   left: 20px;
 }
@@ -252,11 +278,14 @@ a:hover {
   margin-top: 20px;
 }
 .categories-content h1 {
-  font-family: "Caveat", cursive;
   margin-bottom: 50px;
 }
 .categories-content .description {
   text-align: center;
+}
+
+.categories-li {
+  font-size: 0.9em;
 }
 
 .category-content {
